--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <h2>I am a Web Developer !</h2>
     <hr>
 
-    <h3><a href="http://127.0.0.1:3000/public/movie-ranking.html">Movie Ranking Project</a></h3>
+    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
     <img src="./assets/images/movie-ranking.png" height="200"  alt="movie project">
-    <h3> <a href="http://127.0.0.1:3000/public/birthday-invite.html">Birthday Invite Project</a></h3>
+    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
+  
     <img src="./assets/images/Birthday invite.png" height="200" alt="birthday project">
     <hr>
-    <a href="http://127.0.0.1:3000/public/contact.html">Contact Me </a>
+    <a href="./public/contact.html">Contact Me </a>
+    
 </body>
 </html>
 
